--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@
 # You can change `author1` to your shortname.
 author1:
   # Replace <...> with your own (remove the < >)
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Jack Gilmartin
+  email:             jack.gilmartin77@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -67,8 +67,8 @@ author1:
 
 # Another author
 author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
+  name:              David Brennan
+  email:             davidwbrennan@hotmail.com
   about:             |
     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
