Add image assets. Update sidebar. Update authors. Update CSS.

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Project Dissonance is an action-adventure stealth video game built on the Unity 3D engine.
+  An action-adventure stealth video game built on the Unity 3D engine.
 
 # A list of keywords for your blog.
 keywords:              []
