Added my blog post for this week. Expect another commit to fix any errors I've made. I also changed the GitHub social link back to the one for our organisation.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,7 +28,7 @@ S00171013:
   # Comment/uncomment to show/hide. Rearrange to change the order in which they appear.
   social:
     # twitter:         <username>
-    github:          S00171013
+    github:          ITSGameDevTeamY3
     # download:        <url>
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
