--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -90,9 +90,10 @@ s00172994:
     srcset:
       1x:            assets/img/user/david/avatar-128x128.jpg
       2x:            assets/img/user/david/avatar-256x256.jpg
-  twitter:           Daithyi
-  github:            s00172994
-  linkedin:          david-brennan-daithy
+  social:
+    twitter:           Daithyi
+    github:            s00172994
+    linkedin:          daithy
 
   # Every author can have his/her own accent color and image.
   # This will change the appearance of all pages of this author.
@@ -110,8 +111,9 @@ S00168347:
 
     Hi there, my name is Adrian Fearon and im the lead audio programmer and composer of the Project Dissonance team.
   picture:           assets/img/user/adrian/photo_adrian.jpg
-  twitter:           Fearonz
-  github:            S00168347
+  social:
+    twitter:           Fearonz
+    github:            S00168347
 
   # Every author can have his/her own accent color and image.
   # This will change the appearance of all pages of this author.
@@ -129,9 +131,10 @@ S00167922:
     I am also a freelance artist in my spare time.  
     
   picture:           assets/img/user/donnacha/cvpic.png
-  instagram:         dfallon_art
-  linkedin:          donnacha-fallon
-  github:            S00167922
+  social:
+    instagram:         dfallon_art
+    linkedin:          donnacha-fallon
+    github:            S00167922
 
   # Every author can have his/her own accent color and image.
   # This will change the appearance of all pages of this author.
