--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ S00171013:
     I have a keen interest in video games as a medium and would consider myself an aficionado of video game soundtracks (OSTs).
     
     Highly proficient in spelling and grammar from an early age, I am now focused on improving my programming and problem-solving skills both through coursework and during my free time.
-    Known to take work seriously, I like to ensure it is done well and on-time. I Have a lot of experience with C# programming in GameMaker and MonoGame. 
+    Known to take work seriously, I like to ensure it is done well and on-time. I have a lot of experience with C# programming in GameMaker and MonoGame. 
     I am currently getting to grips with the Unity engine.
 
 
@@ -59,7 +59,7 @@ S00171013:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <firstname-lastname-string>
+    linkedin:        jackwgilmartin
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
