Commented out my LinkedIn link for now, since it shows up on the blog's front page. I also removed an image link to an image that wasn't showing up on my first blog entry.  There should be enough images on the post anyway.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -59,7 +59,7 @@ S00171013:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        jackwgilmartin
+    #linkedin:        jackwgilmartin
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
